...
            self.statisticService?.store(correct: correctAnswers, total: questionsAmount)
            
            // готовим данные для модели
            let message = makeResultsMessage()
            
            let quizResult = AlertModel(
                title: "Этот раунд окончен!",
                text: message,
                buttonText: "Сыграть еще раз",
                completion: restartGame)
            
            // передаем данные для модели
            viewController.showResult(result:quizResult)
...
